# ubiquant-market-prediction

./: .gitignore  README.md  pyproject.toml
scripts/: check_features_time_investment.sh  check_lightgbm_base_hparams.sh  check_lstm_base_hparams.sh  convert_csv_to_pickle.py  convert_df_to_tensor.py  run_validation.py
scripts/example_configs/: validation_config_debug.yml  validation_config_lgbm.yml  validation_config_lstm.yml  validation_config_mlp.yml
ubiquant_market_prediction/: config.py  evaluation.py  loading.py  models.py  nn_commons.py  preprocessing.py  rnn.py  rnn_inference_helper.py  utils.py  validation.py
