[tool.poetry]
name = "ubiquant-market-prediction"
version = "0.1.0"
description = ""
authors = ["Davide <davide.burba@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.10.0"
pandas = "^1.4.1"
lightgbm = "^3.3.2"
dask = "^2022.3.0"
cPython = "^0.0.6"
Cython = "^0.29.28"
xarray = "^2022.3.0"
fastprogress = "^1.0.2"
tqdm = "^4.63.1"
mlflow = "^1.24.0"
torch = "^1.11.0"
matplotlib = "^3.5.1"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
